# rememberthemilk

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .sonarcloud.properties  1auth.py  2run.py  2tasks_completed.py  3tasks_overdue.py  README.md  cspell-words.txt  cspell.config.yaml  helper.py  pyproject.toml  rememberthemilk-bday-mail-import.pl  rememberthemilk-test-gitignore.ini  rememberthemilk.ini.example  rememberthemilk.py  ruff.toml
.github/workflows/: check.yml  test-python-app.yml
.streamlit/: config.toml
scripts/: update.sh
src/: app.py  auth.py  helper.py  rememberthemilk.ini.example  rememberthemilk.toml.example  tasks_completed.py  tasks_overdue.py
src/pages/: Completed.py  Overdue.py
src/reports/: 01_Completed.py  02_overdue.py  r01_completed.py  r02_overdue.py
tests/: helper_test.py  test_helper.py
tests/test_data/: expected_tasks.json  lists.json  tasks-22bdb63221113b56984b77647a7b7d95.json
